<resources>
    <string name="app_name">wildpress</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Log in -->
    <string name="loginUserNameHint">Username</string>
    <string name="loginPasswordHint">Password</string>
    <string name="loginLoginBtn">Log in</string>
    <string name="loginJoinArmy">Join the army</string>
    <string name="loginGoogle">Sign in with Google</string>
    <string name="loginSignInBtn">Sign in</string>
    <string name="loginRememberMe">Remember me</string>
    <string name="loginForgotPassw"><u>Forgot your password?</u></string>
    <string name="loginAppName"><font color="#FFFFFF">Wild</font><font color="#FF6624">Press</font></string>
    <!-- Sign in -->
    <string name="signInEmailAddress"><font color='#000000'>Email Address</font><font color='#FF6624'>*</font></string>
    <string name="signInEmailAddressHint">Enter your email</string>
    <string name="signInUsername"><font color='#000000'>Username</font><font color='#FF6624'>*</font></string>
    <string name="signInUsernameHint">Enter your username</string>
    <string name="signInFirstName">First name</string>
    <string name="signInFirstNameHint">Enter your first name</string>
    <string name="signInLastName">Last name</string>
    <string name="signInLastNameHint">Enter your last name</string>
    <string name="signInPassword"><font color='#000000'>Password</font><font color='#FF6624'>*</font></string>
    <string name="signInPasswordHint">Enter your password</string>
    <string name="signInConfirmPassword"><font color='#000000'>Confirm password</font><font color='#FF6624'>*</font></string>
    <string name="signInConfirmPasswordHint">Enter your password</string>
    <string name="signInAboutMe">About me</string>
    <string name="signInAboutMeHint">Type here</string>
    <string name="signInSignInBtn">Sign In</string>
    <string name="signInCancelBtn">Cancel</string>
    <!-- Feed -->
    <string name="FeedNavBar">Feed</string>
    <string name="FriendsActivity">Friends Activity</string>
    <string name="NewPostBtn">+</string>
    <!-- New Post-->
    <string name="SubmitPostBtn">Post</string>
    <!-- Diet -->
    <string name="DietNavBar">Diet</string>
    <string name="createDietBtn">Create diet</string>
    <string name="dietsTitle">Your diets</string>
    <!-- Create Diet -->
    <string name="dietCreDietName">Diet Name</string>
    <string name="dietCreDietNameHint">Enter the name of the diet</string>
    <string name="dietCreDescription">Description</string>
    <string name="dietCreDietDescriptionHint">Enter the description of the diet</string>
    <string name="dietCreIngredients">Ingredients</string>
    <string name="dietCreDietIngredientsHint">Enter the ingredients of the diet</string>
    <string name="dietCreSubmitBtn">Submit</string>
    <string name="dietCreCancelBtn">Cancel</string>
    <!-- Workout -->
    <string name="workoutsTitle">Your workouts</string>
    <string name="WorkoutNavBar">Workout</string>
    <string name="workoutCreateWorkoutBtn">Create workout</string>
    <string name="workoutExerciseBtn">Exercises</string>
    <!-- CreateWorkout -->
    <string name="createWorkoutName">Name</string>
    <string name="createWorkoutNameHint">Enter the name of the workout</string>
    <string name="createWorkoutDescription">Description</string>
    <string name="createWorkoutDescriptionHint">Enter the description of the workout</string>
    <string name="createWorkoutSeparator">:</string>
    <string name="createWorkoutRounds">Rounds</string>
    <string name="createWorkoutRoundsRest">Rounds rest (in minutes)</string>
    <string name="createWorkoutExerciseRest">Exercise rest (in minutes)</string>

    <!-- WorkoutActivity-->
    <string name="workoutTime">Total time</string>
    <string name="workoutCalories">Calories</string>
    <string name="workoutMuscles">Muscles</string>
    <string name="workoutRest">Rest</string>
    <string name="workoutRounds">Rounds</string>
    <string name="workoutRoundRest">Round rest</string>
    <string name="workoutStartBtn">Start</string>
    <string name="workoutTimerDefault">00:00:00</string>
    <!-- WorkoutStartActivity-->
    <string name="workoutStartExerciseNameDefault">Rest</string>
    <string name="workoutStartPrevBtn">Prev</string>
    <string name="workoutStartNextBtn">Next</string>
    <!-- Exercise -->
    <string name="exerciseSearch">Search</string>
    <string name="exerciseCreateExercise">Create exercise</string>
    <string name="exerciseSelectedExerciseBtn">Ready</string>
    <string name="exerciseSelectedExercises">Select exercises (hold)</string>
    <!-- Create Exercise -->
    <string name="exerciseCreName">Exercise Name</string>
    <string name="exerciseCreNameHint">Enter the name of the exercise</string>
    <string name="exerciseCreMuscle">Muscles</string>
    <string name="exerciseCreDescription">Description</string>
    <string name="exerciseCreDescriptionHint">Enter the description of the exercise</string>
    <string name="exerciseCreSubmitBtn">Submit</string>
    <string name="exerciseCreCancelBtn">Cancel</string>
    <!-- Schedule -->
    <string name="ScheduleNavBar">Schedule</string>
    <!-- Profile -->
    <string name="ProfileNavBar">Profile</string>
    <string name="profFollowers">Followers</string>
    <string name="profFollowing">Following</string>
    <string name="profRoutines">Published routines</string>
    <string name="profFavoriteExercise">Favorite exercise</string>
    <string name="profLeague">League</string>
    <!-- ExerciseView -->
    <string name="exerciseViewMuscle">Muscle</string>
    <string name="exerciseViewRepetitions">Repetitions</string>
</resources>