<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <TextView
        android:id="@+id/appNameText"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="10dp"
        android:text="@string/loginAppName"
        android:theme="@style/AppNameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/logUsernameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="42dp"
        android:ems="10"
        android:hint="@string/loginUserNameHint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:background="@drawable/text_input_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appNameText" />

    <EditText
        android:id="@+id/PasswordText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="42dp"
        android:ems="10"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:hint="@string/loginPasswordHint"
        android:background="@drawable/text_input_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logUsernameText" />

    <CheckBox
        android:id="@+id/logRememberCheckBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="20dp"
        android:minHeight="48dp"
        android:text="@string/loginRememberMe"
        android:textColor="@color/secondary"
        android:theme="@style/CheckBoxTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PasswordText" />

    <TextView
        android:id="@+id/logForgotBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="42dp"
        android:text="@string/loginForgotPassw"
        android:textAlignment="center"
        android:theme="@style/OrangeTitleText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PasswordText" />

    <Button
        android:id="@+id/logBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/loginLoginBtn"
        android:theme="@style/ButtonTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logRememberCheckBox" />

    <TextView
        android:id="@+id/logJoinBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/loginJoinArmy"
        android:textStyle="bold"
        android:theme="@style/OrangeTitleText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logBtn" />

    <Button
        android:id="@+id/logGoogleBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/loginGoogle"
        android:theme="@style/ButtonTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logJoinBtn" />

    <Button
        android:id="@+id/logSignBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/loginSignInBtn"
        android:theme="@style/ButtonTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logGoogleBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>